Bug Fix ComputeDomain